Updated navbar and fixed mobile overflow issue

--- a/style.css
+++ b/style.css
@@ -3,13 +3,16 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  
 }
 
 body {
-    background-color: black;
-    color: #ffffff;
- }
+  background-color: black;
+  color: #ffffff;
+}
+html,
+body {
+  overflow-x: hidden;
+}
 
 html {
   scroll-behavior: smooth;
@@ -41,13 +44,11 @@ html {
   align-items: center;
   user-select: none;
   min-height: 10vh;
- 
 }
 
 .brand {
   cursor: pointer;
   padding: 5px 20px;
-  
 }
 .brand img {
   width: 90px;
@@ -60,9 +61,9 @@ html {
 }
 .brand img:hover {
   border: 1px solid #ffffff;
-   animation: none;               /* stop the animation */
-  transform: rotate(0deg);       /* reset to vertical */
-  transition: transform 0.3s ease; 
+  animation: none; /* stop the animation */
+  transform: rotate(0deg); /* reset to vertical */
+  transition: transform 0.3s ease;
 }
 
 /* Keyframes for rotation */
@@ -108,11 +109,11 @@ html {
 
   .nav-links {
     position: fixed;
-    top: 80px;
+    top: 108px;
     right: 0;
     height: 100vh;
     width: 200px;
-    background-color: #333;
+    background-color: #000000;
     flex-direction: column;
     padding: 60px 20px;
     gap: 20px;
@@ -149,59 +150,59 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10px;
-  
-}
-
-.left-home-section{
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    
-}
-.left-home-section h1{
-   font-size: 50px;
-}
-.left-home-section p{
-    font-size: 25px;
-}
-.right-home-section{
-    width: 40%;
-    
+  padding: 30px 50px;
 
 }
-.right-home-section img{
-    width: 400px;
-    
-    
+
+.left-home-section {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  gap: 10px;
+}
+.left-home-section h1 {
+  font-size: 50px;
+}
+.left-home-section p {
+  font-size: 25px;
+}
+.right-home-section {
+  width: 40%;
+  text-align: center;
+}
+.right-home-section img {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
 }
 /* Responsive web design  */
-@media (max-width: 768px) {
-  .home-section{
+@media (max-width: 810px) {
+  .home-section {
     display: block;
-    width: 100%;
     align-items: center;
+    padding: 15px 30px;  
+  }
+  .left-home-section {
+    width: 100%;
+     gap: 20px;
+  }
+  .right-home-section {
+    width: 100%;
     
   }
-  .left-home-section{
-    width: 100%;
-   
-  }
-  .right-home-section{
-    width: 100%;
-    text-align: center;
-  }
-  .left-home-section h1,
-  .left-home-section p{
+  .left-home-section h1{
     font-size: 30px;
   }
+  .left-home-section p {
+    font-size: 20px;
+  }
 }
-#about{
-    text-align: center;
-    padding-top: 130px;
+#about {
+  text-align: center;
+  padding-top: 130px;
 }
-#about span{
-    text-align: center;
-    font-size: 40px;
-    font-weight: 600;
+#about span {
+  text-align: center;
+  font-size: 40px;
+  font-weight: 600;
 }
